@startuml
skinparam dpi 200
skinparam classAttributeIconSize 0
skinparam shadowing false

class ReviewBoardController {
    + ReviewBoardController()
    + reviewList(Model, String, int): String
    + reviewRead(Model, int): String
    + reviewAdd(Model, ReviewBoard): String
    + reviewEdit(Model, int): String
    + reviewDelete(Model, int): String
}

class ReviewBoardRestController {
    + ReviewBoardRestController()
    + deleteReview(int): Map<String, Object>
    + reviewAdd(String, String, String, MultipartFile, String, String, Member): Map<String, Object>
    + reviewEditOk(int, String, String, String, MultipartFile, String, String, Member): Map<String, Object>
}

class ReviewBoardService {
    + addItem(ReviewBoard): ReviewBoard
    + editItem(ReviewBoard): ReviewBoard
    + deleteItem(ReviewBoard): int
    + getItem(ReviewBoard): ReviewBoard
    + getList(ReviewBoard): List<ReviewBoard>
    + getCount(ReviewBoard): int
}

class ReviewBoardServiceImpl {
    + addItem(ReviewBoard): ReviewBoard
    + editItem(ReviewBoard): ReviewBoard
    + deleteItem(ReviewBoard): int
    + getItem(ReviewBoard): ReviewBoard
    + getList(ReviewBoard): List<ReviewBoard>
    + getCount(ReviewBoard): int
}

class ReviewImgService {
    + addItem(ReviewImg): ReviewImg
    + editItem(ReviewImg): ReviewImg
    + deleteItem(ReviewImg): int
    + getItem(ReviewImg): ReviewImg
    + getList(ReviewImg): List<ReviewImg>
    + getCount(ReviewImg): int
}

class ReviewImgServiceImpl {
    + addItem(ReviewImg): ReviewImg
    + editItem(ReviewImg): ReviewImg
    + deleteItem(ReviewImg): int
    + getItem(ReviewImg): ReviewImg
    + getList(ReviewImg): List<ReviewImg>
    + getCount(ReviewImg): int
}

class OrderItemService {
    + addItem(OrderItem): OrderItem
    + editItem(OrderItem): OrderItem
    + deleteItem(OrderItem): int
    + getItem(OrderItem): OrderItem
    + getList(OrderItem): List<OrderItem>
    + getCount(OrderItem): int
}

class OrderItemServiceImpl {
    + addItem(OrderItem): OrderItem
    + editItem(OrderItem): OrderItem
    + deleteItem(OrderItem): int
    + getItem(OrderItem): OrderItem
    + getList(OrderItem): List<OrderItem>
    + getCount(OrderItem): int
}

class RestHelper {
    + RestHelper()
    + sendJson(int, String, Map<String, Object>, Exception): Map<String, Object>
    + sendJson(Map<String, Object>): Map<String, Object>
    + sendJson(): Map<String, Object>
    + sendError(int, String): Map<String, Object>
    + badRequest(String): Map<String, Object>
    + badRequest(Exception): Map<String, Object>
    + serverError(String): Map<String, Object>
}

class FileHelper {
    + FileHelper()
    + saveFile(MultipartFile, String): String
    + deleteFile(String): boolean
    + getFile(String): File
}

class RegexHelper {
    + RegexHelper()
    + isValue(String): boolean
    + isEmail(String): boolean
    + isPhone(String): boolean
    + isNum(String): boolean
}

class WebHelper {
    + WebHelper()
    + getRequest(): HttpServletRequest
    + getResponse(): HttpServletResponse
    + getSession(): HttpSession
    + getParameter(String): String
    + getParameter(String, String): String
    + getParameterValues(String): String[]
    + getCookie(String): Cookie
    + setCookie(String, String, int): void
    + removeCookie(String): void
}

ReviewBoardController --> ReviewBoardService
ReviewBoardController --> ReviewImgService
ReviewBoardController --> OrderItemService
ReviewBoardController --> FileHelper
ReviewBoardController --> RegexHelper
ReviewBoardController --> WebHelper

ReviewBoardRestController --> RestHelper
ReviewBoardRestController --> FileHelper
ReviewBoardRestController --> ReviewBoardService
ReviewBoardRestController --> ReviewImgService

ReviewBoardServiceImpl ..> ReviewBoardService
ReviewImgServiceImpl ..> ReviewImgService
OrderItemServiceImpl ..> OrderItemService

' 배치 수정
ReviewBoardController -[hidden]-> ReviewBoardRestController
ReviewBoardService -[hidden]-> ReviewBoardServiceImpl
ReviewImgService -[hidden]-> ReviewImgServiceImpl
OrderItemService -[hidden]-> OrderItemServiceImpl
RestHelper -[hidden]-> FileHelper
RegexHelper -[hidden]-> WebHelper

@enduml